# MundusVivens.GameServer.Cpp

./: .gitignore  AsyncGrpcClient.cpp  AsyncGrpcClient.h  BTNode.h  BehaviorTrees.h  Benchmark.cpp  Benchmark.h  CMakeLists.txt  CMakePresets.json  ClientSession.cpp  ClientSession.h  Components.h  GameLoop.cpp  GameLoop.h  GridMap.cpp  GridMap.h  GrpcResultQueue.h  LocationRegistry.cpp  LocationRegistry.h  MSVCCompat.cpp  MundusVivensClient.cpp  MundusVivensClient.h  PacketProtocol.h  README.md  SpatialHashGrid.cpp  SpatialHashGrid.h  SystemAmbient.cpp  SystemBehaviorTree.cpp  SystemJobDriver.cpp  SystemMovement.cpp  SystemNetwork.cpp  SystemPlayer.cpp  SystemSocial.cpp  SystemSurvival.cpp  Systems.cpp  Systems.h  TcpServer.cpp  TcpServer.h  TracyIntegration.h  build_local.ps1  (+7 more)
.agents/: AGENTS.md
Protos/: mundus_vivens.proto
docs/: 01_architecture.md  02_agent_design.md  03_phase7_roadmap.md
docs/references/: smallville_behavior_report.md
